# module38_html_editor

./: CMakeLists.txt  main.cpp  web_editor.cpp  web_editor.h  web_editor.ui
